<?xml version="1.0" encoding="utf-8"?>
<resources>

<string name="toggleBtnStart">Start</string>
<string name="toggleBtnStop">Stop</string>

<string name="br">Breton (Untranslatable)</string>
<string name="ca">Catalan</string>
<string name="zh">Chinese</string>
<string name="cs">Czech</string>
<string name="nl">Dutch</string>
<string name="en_in">English Indian (Untranslatable)</string>
<string name="en_us">English US</string>
<string name="eo">Esperanto</string>
<string name="fr">French</string>
<string name="de">German</string>
<string name="gu">Gujarati (Untranslatable)</string>
<string name="hi">Hindi</string>
<string name="it">Italian</string>
<string name="ja">Japanese</string>
<string name="kk">Kazakh (Untranslatable)</string>
<string name="ko">Korean</string>
<string name="fa">Persian</string>
<string name="pl">Polish</string>
<string name="pt">Portuguese</string>
<string name="ru">Russian</string>
<string name="es">Spanish</string>
<string name="sv">Swedish</string>
<string name="tg">Tajik (Untranslatable)</string>
<string name="tr">Turkish</string>
<string name="uk">Ukrainian</string>
<string name="uz">Uzbek (Untranslatable)</string>
<string name="vi">Vietnamese (Untranslatable)</string>

<string name="br_value">https://alphacephei.com/vosk/models/vosk-model-br-0.8.zip</string>
<string name="ca_value">https://alphacephei.com/vosk/models/vosk-model-small-ca-0.4.zip</string>
<string name="zh_value">https://alphacephei.com/vosk/models/vosk-model-small-cn-0.22.zip</string>
<string name="cs_value">https://alphacephei.com/vosk/models/vosk-model-small-cs-0.4-rhasspy.zip</string>
<string name="nl_value">https://alphacephei.com/vosk/models/vosk-model-small-nl-0.22.zip</string>
<string name="en_in_value">https://alphacephei.com/vosk/models/vosk-model-small-en-in-0.4.zip</string>
<string name="en_us_value">https://alphacephei.com/vosk/models/vosk-model-small-en-us-0.15.zip</string>
<string name="eo_value">https://alphacephei.com/vosk/models/vosk-model-small-eo-0.42.zip</string>
<string name="fr_value">https://alphacephei.com/vosk/models/vosk-model-small-fr-0.22.zip</string>
<string name="de_value">https://alphacephei.com/vosk/models/vosk-model-small-de-0.15.zip</string>
<string name="gu_value">https://alphacephei.com/vosk/models/vosk-model-small-gu-0.42.zip</string>
<string name="hi_value">https://alphacephei.com/vosk/models/vosk-model-small-hi-0.22.zip</string>
<string name="it_value">https://alphacephei.com/vosk/models/vosk-model-small-it-0.22.zip</string>
<string name="ja_value">https://alphacephei.com/vosk/models/vosk-model-small-ja-0.22.zip</string>
<string name="kk_value">https://alphacephei.com/vosk/models/vosk-model-small-kz-0.15.zip</string>
<string name="ko_value">https://alphacephei.com/vosk/models/vosk-model-small-ko-0.22.zip</string>
<string name="fa_value">https://alphacephei.com/vosk/models/vosk-model-small-fa-0.5.zip</string>
<string name="pl_value">https://alphacephei.com/vosk/models/vosk-model-small-pl-0.22.zip</string>
<string name="pt_value">https://alphacephei.com/vosk/models/vosk-model-small-pt-0.3.zip</string>
<string name="ru_value">https://alphacephei.com/vosk/models/vosk-model-small-ru-0.22.zip</string>
<string name="es_value">https://alphacephei.com/vosk/models/vosk-model-small-es-0.42.zip</string>
<string name="sv_value">https://alphacephei.com/vosk/models/vosk-model-small-sv-rhasspy-0.15.zip</string>
<string name="tg_value">https://alphacephei.com/vosk/models/vosk-model-small-tg-0.22.zip</string>
<string name="tr_value">https://alphacephei.com/vosk/models/vosk-model-small-tr-0.3.zip</string>
<string name="uk_value">https://alphacephei.com/vosk/models/vosk-model-small-uk-v3-small.zip</string>
<string name="uz_value">https://alphacephei.com/vosk/models/vosk-model-small-uz-0.22.zip</string>
<string name="vi_value">https://alphacephei.com/vosk/models/vosk-model-small-vn-0.3.zip</string>

<string name="language_none">No Translation</string>
<string name="language_ar">Arabic</string>
<string name="language_az">Azerbaijani</string>
<string name="language_ca">Catalan</string>
<string name="language_zh">Chinese</string>
<string name="language_cs">Czech</string>
<string name="language_da">Danish</string>
<string name="language_nl">Dutch</string>
<string name="language_en">English</string>
<string name="language_eo">Esperanto</string>
<string name="language_fi">Finnish</string>
<string name="language_fr">French</string>
<string name="language_de">German</string>
<string name="language_el">Greek</string>
<string name="language_he">Hebrew</string>
<string name="language_hi">Hindi</string>
<string name="language_hu">Hungarian</string>
<string name="language_id">Indonesian</string>
<string name="language_ga">Irish</string>
<string name="language_it">Italian</string>
<string name="language_ja">Japanese</string>
<string name="language_ko">Korean</string>
<string name="language_fa">Persian</string>
<string name="language_pl">Polish</string>
<string name="language_pt">Portugese</string>
<string name="language_ru">Russian</string>
<string name="language_sk">Slovak</string>
<string name="language_es">Spanish</string>
<string name="language_sv">Swedish</string>
<string name="language_tr">Turkish</string>
<string name="language_uk">Ukrainian</string>

<string name="small_none">none</string>
<string name="small_ar">ar</string>
<string name="small_az">az</string>
<string name="small_ca">ca</string>
<string name="small_cn">zt</string>
<string name="small_cs">cs</string>
<string name="small_da">da</string>
<string name="small_nl">nl</string>
<string name="small_en_us">en</string>
<string name="small_eo">eo</string>
<string name="small_fi">fi</string>
<string name="small_fr">fr</string>
<string name="small_de">de</string>
<string name="small_el">el</string>
<string name="small_he">he</string>
<string name="small_hi">hi</string>
<string name="small_hu">hu</string>
<string name="small_id">id</string>
<string name="small_ga">ga</string>
<string name="small_it">it</string>
<string name="small_ja">ja</string>
<string name="small_ko">ko</string>
<string name="small_fa">fa</string>
<string name="small_pl">pl</string>
<string name="small_pt">pt</string>
<string name="small_ru">ru</string>
<string name="small_sk">sk</string>
<string name="small_es">es</string>
<string name="small_sv">sv</string>
<string name="small_tr">tr</string>
<string name="small_uk">uk</string>

<string name="name_asc">Name (A - Z)</string>
<string name="name_des">Name (Z - A)</string>
<string name="size_asc">Size (Smallest - Biggest)</string>
<string name="size_des">Size (Biggest - Smallest)</string>
<string name="date_asc">Date (Ancient - Latest)</string>
<string name="date_des">Date (Latest - Ancient)</string>

<string name="name_asc_value">name_asc</string>
<string name="name_des_value">name_des</string>
<string name="size_asc_value">size_asc</string>
<string name="size_des_value">size_des</string>
<string name="date_asc_value">date_asc</string>
<string name="date_des_value">date_des</string>

<string name="default_samplerate">Default</string>
<string name="veryhigh">48000 kHz</string>
<string name="high">44100 kHz</string>
<string name="medium">16000 kHz</string>
<string name="low">8000 kHz</string>

<string name="default_samplerate_value">0</string>
<string name="veryhigh_value">48000</string>
<string name="high_value">44100</string>
<string name="medium_value">16000</string>
<string name="low_value">8000</string>

<string name="default_channel">Default</string>
<string name="mono">MONO</string>
<string name="stereo">STEREO</string>

<string name="default_channel_value">0</string>
<string name="mono_value">1</string>
<string name="stereo_value">2</string>

<string name="language_key">languages</string>
<string name="config_key">config</string>
<string name="vosk_preference_key">vosk_model</string>
<string name="vosk_preference_description">Set language for voice dialogue recognition</string>
<string name="vosk_model_title">ASR Language</string>
<string name="translator_key">translator_language</string>
<string name="translator_description">Set language to be displayed as subtitle</string>
<string name="translator_title">Translation Language</string>
<string name="min_active_description">Set model minimum active period</string>
<string name="max_active_description">Set model maximum active period</string>
<string name="min_active_key">min_period</string>
<string name="max_active_key">max_period</string>
<string name="min_active_period">200</string>
<string name="max_active_period">7000</string>
<string name="min_active_title">Minimum active</string>
<string name="max_active_title">Maximum active</string>
<string name="sortlist_key">sortlist_items</string>
<string name="sortlist_name">Sort list</string>
<string name="sortlist_description">Sort videos order in list</string>
<string name="vibration_switch_key">switch_key</string>
<string name="font_size_key">font_key</string>
<string name="timeformat_key">timeformat_key</string>
<string name="samplerate_key">samplerate</string>
<string name="samplerate_description">Set output audio sample rate</string>
<string name="channel_key">channel</string>
<string name="channel_description">Set output audio channel</string>

</resources>